--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,25 +1,19 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-darkpink">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">PetitNomSympa</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Accueil</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/list-doc">Liste</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/archivage">Archiver</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/statistiques">Statistiques</a>
-        </li>
-      </ul>
+<div>
+  <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a href="#" class="navbar-brand">AAAAAAAAAAAAAAAAAAAAAAAAAAAH</a>
+    <div class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a routerLink="archivage" class="nav-link">documents</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="list-doc" class="nav-link">list</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="statistiques" class="nav-link">stats</a>
+      </li>
     </div>
+  </nav>
+  <div class="container mt-5">
+    <router-outlet></router-outlet>
   </div>
-</nav>
-<router-outlet></router-outlet>
+</div>
