--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,6 +3,9 @@
     <a href="#" class="navbar-brand">AAAAAAAAAAAAAAAAAAAAAAAAAAAH</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
+        <a routerLink="accueil" class="nav-link">Accueil</a>
+      </li>
+      <li class="nav-item">
         <a routerLink="archivage" class="nav-link">documents</a>
       </li>
       <li class="nav-item">
