--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,18 +1,26 @@
 <div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">AAAAAAAAAAAAAAAAAAAAAAAAAAAH</a>
+    <a routerLink="accueil" class="navbar-brand">Coucou Daddy</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a routerLink="accueil" class="nav-link">Accueil</a>
+        <a routerLink="accueil" routerLinkActive="active" class="nav-link"
+          >Accueil</a
+        >
       </li>
       <li class="nav-item">
-        <a routerLink="archivage" class="nav-link">documents</a>
+        <a routerLink="archivage" routerLinkActive="active" class="nav-link"
+          >Archiver</a
+        >
       </li>
       <li class="nav-item">
-        <a routerLink="list-doc" class="nav-link">list</a>
+        <a routerLink="list-doc" routerLinkActive="active" class="nav-link"
+          >list</a
+        >
       </li>
       <li class="nav-item">
-        <a routerLink="statistiques" class="nav-link">stats</a>
+        <a routerLink="statistiques" routerLinkActive="active" class="nav-link"
+          >stats</a
+        >
       </li>
     </div>
   </nav>
