--- a/frontend/src/app/statistiques/statistiques.component.html
+++ b/frontend/src/app/statistiques/statistiques.component.html
@@ -1,18 +1,49 @@
-<table>
+<h5>Les documents par type</h5>
+<table class="table bg-cream">
   <thead>
     <tr>
-      <th>Date</th>
-      <th>Nombre de documents archivés</th>
+      <th>TYPE</th>
+      <th>Nombre de Documents</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>09/09/2020</td>
-      <td>1</td>
+    <tr *ngFor="let doc of byType | keyvalue">
+      <td>{{doc.key}}</td>
+      <td>{{doc.value}}</td>
     </tr>
+  </tbody>
+</table>
+
+<h5>Les documents par date</h5>
+<table class="table bg-cream">
+  <thead>
     <tr>
-      <td>03/11/2021</td>
-      <td>TEST</td>
+      <th>DATE</th>
+      <th>Nombre de Documents</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let doc of documents | keyvalue">
+      <td>{{doc.key}}</td>
+      <td>{{doc.value}}</td>
+    </tr>
+  </tbody>
+</table>
+
+<h5>Les documents par date et par type</h5>
+<table class="table bg-cream">
+  <thead>
+    <tr>
+      <th>DATE</th>
+      <th>Type</th>
+      <th>Nombre de documents</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let doc of test | keyvalue">
+      <td>{{doc.key.split(",")[0].substring(1)}}</td>
+      <td>{{doc.key.split(",")[1].slice(0,-1)}}</td>
+      <td>{{doc.value}}</td>
     </tr>
   </tbody>
 </table>
