--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a routerLink="accueil" class="navbar-brand">Coucou Daddy</a>
+  <nav class="navbar navbar-expand navbar-dark bg-darkpink">
+    <a routerLink="accueil" class="navbar-brand">Projet CGL</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
         <a routerLink="accueil" routerLinkActive="active" class="nav-link"
@@ -14,12 +14,12 @@
       </li>
       <li class="nav-item">
         <a routerLink="list-doc" routerLinkActive="active" class="nav-link"
-          >list</a
+          >Consulter</a
         >
       </li>
       <li class="nav-item">
         <a routerLink="statistiques" routerLinkActive="active" class="nav-link"
-          >stats</a
+          >Statistiques</a
         >
       </li>
     </div>
