--- a/frontend/src/app/archivage/archivage.component.html
+++ b/frontend/src/app/archivage/archivage.component.html
@@ -1,8 +1,9 @@
 <div style="width: 500px; margin: auto">
   <div class="submit-form">
     <div *ngIf="!submitted">
+      <h5>Archiver un document</h5>
       <div class="form-group">
-        <label for="name">Nom de l'archive</label>
+        <label for="name">Nom de l'archive :</label>
         <input
           type="text"
           class="form-control"
@@ -12,11 +13,11 @@
           name="nom"
         />
       </div>
-
+      <br>
       <div class="form-group">
-        <label for="type-select">Choose a type:</label>
+        <label for="type-select">Type de l'archive :</label>
           <select name="type" id="type-select" required [(ngModel)]="doc.type">
-            <option value="">--Please choose an option--</option>
+            <option value="">--Type--</option>
             <option value="texte">Texte</option>
             <option value="audio">Audio</option>
             <option value="vidéo">Vidéo</option>
@@ -24,10 +25,10 @@
           </select>
 
       </div>
-
+      <br>
       <div class="form-group">
         <label for="validationCustomFile" class="form-label"
-          >Charger le document</label
+          >Charger le document :</label
         >
         <input
           type="file"
@@ -40,13 +41,14 @@
         <div class="valid-feedback">C'est bon !</div>
         <div class="invalid-feedback">Please select a valid state.</div>
       </div>
+      <br>
       <button (click)="add()" class="btn btn-success">
         Archiver
       </button>
     </div>
     <div *ngIf="submitted">
       <h3>Document successfully archivé !</h3>
-      <button class="btn btn-success" (click)="newDocument()">New..</button>
+      <button class="btn btn-success" (click)="newDocument()">Nouveau..</button>
     </div>
   </div>
 </div>
